# technesis-test

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  start.py
src/bot/: keyboards.py  router.py
src/bot/handlers/: command.py  statistics.py  upload.py
src/cache/: 1234.xlsx
src/database/: dao.py  models.py
src/services/: item_parser.py  parse.py  read.py
src/utils/: exceptions.py
