[project]
name = "technesis-test"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey",email = "schwartzalexey@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)"
]

[tool.poetry]
name = "technesis-test"
version = "0.1.0"
description = ""
authors = [
    "alexey schwartzalexey@yandex.com"
]
readme = "README.md"

packages = [
  { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
